[feat] add middleware for jwt valid, utils jwt, swagger update
